2010.01.20: David Nichols
	 * added new library API: BuiltinFunctionList::add2() to allow for
	   setting the return type and parameter types and default parameter
	   values for builtin functions
	 * fixed symbol visibility in QoreTypeSafeReferenceHelper class
	 * infrastructure changes to accommodate consistent parameter handling
	   with user and builtin types

2009.12.10: David Nichols
	 * fixed parse-time type checking of object member references
	 * fixed an issue with inialization order when checking types at parse
	   time

2009.12.09: David Nichols
	* initial implementation of object member initialization at
	  construction time; re-worked public and private member declarations
	  with types
	* functional implementation of object member initialization and type
	  declarations at object construction time

2009.12.04: David Nichols
	* cleaned up builtin function and builtin method implementation
	  (somewhat) in preparation for hard typing support in builtin code

2009.12.03: David Nichols
	* fixed public/private member verification during 2nd stage parsing in
	  class hierarchies

2009.12.02: David Nichols
	* implemented member checking for object slices
	* moved all private methods of QoreObject into the private class
	  implementation
	* moved all private methods of QoreProgram into the private class
	  implementation

2009.12.01: David Nichols
	* implemented instantiating variables with default values when defined
	  with hard types of simple types; enforced requiring assignments for
	  variables defined as complex types
	* return nothingTypeInfo as the output type for local variable
	  declarations without any type information if not assigning to allow
	  more programming errors to be caught at parse time
	* initial support for the 'public' keyword and storing type
	  declarations for private class members
	* implemented public class members and parse-time and run-time
	  checking and enforcement